--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <h1>Player 2</h1>
                             <h2 id="player_name2"> </h2>
 
-                            <h3 id="bosh2"> </h3>
+                            <h3 id="bosh2"> </h3><br><br>
                        <button id="clear">clear</button>
                        <h1 id="winner"> </h1> 
 
